// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RenderTableHeader > renders a heading for each column 1`] = `
<div
  class="grid grid-cols-subgrid border-b-2 items-center col-span-full hover:bg-muted/50"
>
  <div
    class="grid-col-span-1 px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-muted-foreground"
  >
    Column A
  </div>
  <div
    class="grid-col-span-1 px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-muted-foreground"
  >
    Column B
  </div>
</div>
`;

exports[`RenderTableHeader > renders nothing when headings is empty 1`] = `
<div
  class="grid grid-cols-subgrid border-b-2 items-center col-span-full hover:bg-muted/50"
/>
`;
